--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,22 @@
 // Начните писать стили здесь
+
+// Global
+
+@import (less) "global/normalize.css";
+@import "global/global.less";
+@import "global/fonts.less";
+@import "global/variables.less";
+
+// Blocks
+
+@import "blocks/page.less";
+@import "blocks/page-header.less";
+@import "blocks/main-nav.less";
+@import "blocks/promo.less";
+@import "blocks/select-programm.less";
+@import "blocks/application.less";
+@import "blocks/result.less";
+@import "blocks/contacts.less";
+@import "blocks/page-footer.less";
+
+// body { background: rgb(173, 216, 230);}
