Стилизация страницы каталога

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,8 +3,8 @@
 // Global
 
 @import (less) "global/normalize.css";
-@import "global/global.less";
 @import "global/fonts.less";
+@import "global/global.less";
 @import "global/variables.less";
 
 // Blocks
@@ -18,5 +18,7 @@
 @import "blocks/result.less";
 @import "blocks/contacts.less";
 @import "blocks/page-footer.less";
+@import "blocks/catalog.less";
+@import "blocks/additional-products.less";
 
 // body { background: rgb(173, 216, 230);}
