--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -12,6 +12,7 @@
 .contacts__title {
   width: 139px;
   font-size: 16px;
+  font-weight: 400;
   line-height: 20px;
   color: @special-black;
   text-transform: uppercase;
