--- a/source/less/blocks/result.less
+++ b/source/less/blocks/result.less
@@ -40,7 +40,7 @@
   margin-bottom: 26px;
 
   width: 124px;
-  min-height: 64px;
+  min-height: 60px;
   border: 2px solid @special-grey;
   border-radius: 7px;
 }
@@ -54,11 +54,12 @@
   font-size: 24px;
   line-height: 24px;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .result__item-info-caption {
   position: absolute;
-  top: 60px;
+  top: 53px;
   left: 18px;
   width: 87px;
   font-family: "Arial", "Oswald", sans-serif;
