--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -30,3 +30,13 @@
   vertical-align: middle;
   box-sizing: border-box;
 }
+
+.heading-primary {
+  margin: 0;
+  padding-top: 27px;
+  padding-left: 20px;
+  padding-bottom: 41px;
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 36px;
+}
