Стилизация страницы формы

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -3,6 +3,10 @@
   padding-right: 19px;
   padding-bottom: 26px;
   padding-left: 20px;
+
+  &--background {
+    background-color: @basic-grey;
+  }
 }
 
 .contacts__wrapper {
