--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -1,8 +1,7 @@
-// .center {
-//   width: 100%;
-//   margin: 0 auto;
-//   padding: 0 20px;
-// }
+.container {
+  margin: 0 auto;
+  padding: 0 20px;
+}
 
 .visually-hidden {
   position: absolute;
@@ -29,6 +28,7 @@
   display: inline-block;
   vertical-align: middle;
   box-sizing: border-box;
+  cursor: pointer;
 }
 
 .heading-primary {
