--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,7 +3,7 @@
 // Global
 
 @import (less) "global/normalize.css";
-@import "global/fonts.less";
+@import "fonts.less";
 @import "global/global.less";
 @import "global/variables.less";
 
@@ -20,5 +20,6 @@
 @import "blocks/page-footer.less";
 @import "blocks/catalog.less";
 @import "blocks/additional-products.less";
+@import "blocks/form.less";
 
 // body { background: rgb(173, 216, 230);}
