Исправления по замечаниям

--- a/source/less/blocks/application.less
+++ b/source/less/blocks/application.less
@@ -9,9 +9,9 @@
 }
 
 .application__title {
-  font-size: 36px;
-  font-weight: 400;
-  line-height: 40px;
+  // font-size: 36px;
+  // font-weight: 400;
+  // line-height: 40px;
 }
 
 .application__list {
@@ -35,16 +35,13 @@
   }
 
   &--leaf {
-    background-image: url("../../img/svg/leaf.svg");
+    background-image: url("../img/svg/leaf.svg");
     background-repeat: no-repeat;
   }
 }
 
 .application__description {
   padding-left: 75px;
-  font-family: "Arial", "Oswald", sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 18px;
+
   color: @special_dark-grey;
 }
