--- a/source/less/blocks/result.less
+++ b/source/less/blocks/result.less
@@ -3,7 +3,7 @@
 }
 
 .result__wrapper {
-  width: 280px;
+  // width: 280px;
   padding-top: 27px;
   padding-right: 20px;
   padding-left: 20px;
@@ -12,18 +12,12 @@
 .result__title {
   margin: 0;
   margin-bottom: 33px;
-  font-size: 36px;
-  font-weight: 400;
-  line-height: 40px;
 }
 
 .result__description {
   margin: 0;
   margin-bottom: 25px;
-  font-family: "Arial", "Oswald", sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 18px;
+
   color: @special_dark-grey;
 }
 
@@ -51,6 +45,8 @@
 
 .result__item-info {
   padding-top: 14px;
+
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
   line-height: 24px;
   text-align: center;
@@ -62,9 +58,8 @@
   top: 53px;
   left: 18px;
   width: 87px;
-  font-family: "Arial", "Oswald", sans-serif;
+
   font-size: 12px;
-  font-weight: 400;
   line-height: 12px;
   color: @special_dark-grey;
   text-transform: lowercase;
@@ -74,6 +69,8 @@
 
 .result__total {
   margin-bottom: 42px;
+
+  font-family: "Oswald", "Arial", sans-serif;
 }
 
 .result__total-text {
@@ -107,6 +104,7 @@
 
 .result__toggle-before,
 .result__toggle-after {
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
