--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -5,6 +5,7 @@
 }
 
 .additional-products__title {
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
   font-weight: 400;
   line-height: 24px;
@@ -20,16 +21,25 @@
   padding-bottom: 13px;
 }
 
-.additional-products__parameter td:first-child {
+// .additional-products__parameter td:first-child {
+//   padding-top: 13px;
+
+//   border-top: 1px solid @special-grey;
+// }
+
+.additional-products__table-name {
   padding-top: 13px;
+
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   line-height: 16px;
   color: @special_dark-grey-2;
   text-transform: uppercase;
+
   border-top: 1px solid @special-grey;
 }
 
-.additional-products__parameter td:nth-child(n+2):nth-child(-n+3) {
+.additional-products__table-data {
   font-family: "Arial", "Oswald", sans-serif;
   font-size: 14px;
   line-height: 14px;
@@ -48,8 +58,9 @@
 
 .additional-products__bonus {
   position: relative;
+  padding-left: 58px;
   height: 289px;
-  background-image: url("../../img/bg-additional-bonus.png");
+  background-image: url("../img/bg-additional-bonus.png");
 
   &::before {
     content: "";
@@ -58,15 +69,14 @@
     left: 111px;
     width: 56px;
     height: 60px;
-    background-image: url("../../img/svg/bonus-box.svg");
+    background-image: url("../img/svg/bonus-box.svg");
   }
 }
 
 .additional-products__bonus-link {
   padding-top: 186px;
-  padding-left: 58px;
-  width: 161px;
-  font-family: "Arial", "Oswald", sans-serif;
+  width: 171px;
+
   font-size: 16px;
   line-height: 20px;
   color: @basic-white;
