--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -15,6 +15,8 @@
 
 .contacts__title {
   width: 139px;
+
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
@@ -24,9 +26,8 @@
 
 .contacts__address {
   width: 140px;
-  font-family: "Arial", "Oswald", sans-serif;
-  font-size: 14px;
-  line-height: 20px;
+
   font-style: normal;
+  line-height: 20px;
   color: @special_dark-grey;
 }
