--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -28,6 +28,7 @@
 }
 
 .main-nav__item a {
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 20px;
   font-weight: 500;
   line-height: 20px;
