--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -1,6 +1,9 @@
 .page {
   height: 100%;
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: "Arial", "Oswald", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
 }
 
 .page__body {
