--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -8,12 +8,13 @@
     z-index: -2;
     width: 563px;
     height: 302px;
-    background-image: url("../../img/promo-bg-img-m.png");
+    background-image: url("../img/promo-bg-img-m.png");
     background-repeat: no-repeat;
   }
 }
 
 .promo__wrapper {
+
   &::before {
     content: "";
     position: absolute;
@@ -33,6 +34,7 @@
   padding-bottom: 29px;
   padding-left: 60px;
 
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 14px;
@@ -44,10 +46,12 @@
 }
 
 .promo__image {
-  padding-top: 0;
   padding-right: 20px;
   padding-left: 20px;
   padding-bottom: 3px;
+  width: 280px;
+  height: 270px;
+  box-sizing: content-box;
 }
 
 .promo__button-wrapper {
@@ -64,14 +68,8 @@
 .heading-primary--m-white {
   margin: 0;
   padding-top: 27px;
-  padding-right: 35px;
   padding-bottom: 25px;
-  padding-left: 36px;
-  width: 249px;
 
-  font-size: 36px;
-  font-weight: 400;
-  line-height: 36px;
   color: @basic-white;
   text-align: center;
 }
