--- a/source/less/blocks/select-programm.less
+++ b/source/less/blocks/select-programm.less
@@ -15,6 +15,7 @@
   margin: 0;
   margin-bottom: 29px;
 
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
   font-weight: 400;
   line-height: 37px;
@@ -28,10 +29,6 @@
   padding-left: 20px;
   width: 227px;
 
-  font-family: "Arial", "Oswald", sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 18px;
   color: @special_dark-grey;
 }
 
@@ -39,6 +36,7 @@
   display: block;
   padding-left: 19px;
 
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 16px;
