--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -1,7 +1,26 @@
-.container {
-  margin: 0 auto;
-  padding: 0 20px;
+body {
+  margin: 0;
 }
+
+img {
+  max-width: 100%;
+}
+
+a {
+  text-decoration: none;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+
+// .container {
+//   margin: 0 auto;
+//   padding: 0 20px;
+// }
 
 .visually-hidden {
   position: absolute;
@@ -17,6 +36,7 @@
 }
 
 .button {
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
@@ -32,11 +52,9 @@
 }
 
 .heading-primary {
-  margin: 0;
-  padding-top: 27px;
-  padding-left: 20px;
-  padding-bottom: 41px;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 36px;
   font-weight: 400;
   line-height: 36px;
+  color: @basic-black;
 }
