--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,8 +2,8 @@
 
 // Global
 
-@import (less) "global/normalize.css";
-@import "fonts.less";
+@import (less) "../../node_modules/normalize.css/normalize.css";
+@import "global/fonts.less";
 @import "global/global.less";
 @import "global/variables.less";
 
@@ -21,5 +21,8 @@
 @import "blocks/catalog.less";
 @import "blocks/additional-products.less";
 @import "blocks/form.less";
+@import "blocks/social.less";
+@import "blocks/copyright.less";
+@import "blocks/product.less";
 
 // body { background: rgb(173, 216, 230);}
