--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -1,22 +1,18 @@
 .product__title {
-  text-decoration: none;
-
-  &--width h3 {
-    width: 76px;
-  }
-
-  &--all {
-    text-align: center;
-  }
+  width: 76px;
 }
 
-.product__title h3 {
+.product__title-link {
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
   color: @special_dark-grey-2;
   text-transform: uppercase;
+}
+
+.product__title-all {
+  text-align: center;
 }
 
 .product__parameters {
