--- a/source/less/style.less
+++ b/source/less/style.less
@@ -24,5 +24,7 @@
 @import "blocks/social.less";
 @import "blocks/copyright.less";
 @import "blocks/product.less";
+@import "blocks/button.less";
+@import "blocks/heading-primary.less";
 
 // body { background: rgb(173, 216, 230);}
