--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -8,6 +8,11 @@
   text-align: center;
   list-style: none;
   border-bottom: 1px solid @spesial-grey-3;
+
+  @media (min-width: @tablet-width) {
+    padding: 0;
+    border: none;
+  }
 }
 
 .social__item {
