--- a/source/less/style.less
+++ b/source/less/style.less
@@ -6,6 +6,7 @@
 @import "global/fonts.less";
 @import "global/global.less";
 @import "global/variables.less";
+@import "global/center.less";
 
 // Blocks
 
@@ -26,5 +27,6 @@
 @import "blocks/product.less";
 @import "blocks/button.less";
 @import "blocks/heading-primary.less";
+@import "blocks/map.less";
 
 // body { background: rgb(173, 216, 230);}
