--- a/source/less/blocks/application.less
+++ b/source/less/blocks/application.less
@@ -1,17 +1,14 @@
 .application {
-  // width: 279px;
   margin-bottom: 42px;
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 205px;
+  }
 }
 
 .application__wrapper {
-  padding-right: 21px;
-  padding-left: 20px;
-}
-
-.application__title {
-  // font-size: 36px;
-  // font-weight: 400;
-  // line-height: 40px;
+  margin: 0 auto;
+  // width: 280px;
 }
 
 .application__list {
@@ -19,6 +16,20 @@
   padding: 0;
   width: 278px;
   list-style: none;
+
+  @media (min-width: @tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 153px;
+    // flex-wrap: wrap;
+    counter-reset: list;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 80px;
+  }
 }
 
 .application__item {
@@ -32,6 +43,26 @@
     width: 60px;
     height: 60px;
     background-color: @basic-green;
+
+    @media (min-width: @tablet-width) {
+      width: 80px;
+      height: 80px;
+    }
+  }
+
+  &::after {
+    @media (min-width: @tablet-width) {
+      position: absolute;
+      top: -35px;
+      left: 78px;
+      z-index: -1;
+      counter-increment: list;
+      content: counter(list) " ";
+      font-family: "Oswald", "Arial", sans-serif;
+      font-size: 280px;
+      line-height: 280px;
+      color: @basic-grey;
+    }
   }
 
   &--leaf {
@@ -41,7 +72,16 @@
 }
 
 .application__description {
+  margin: 0;
   padding-left: 75px;
 
   color: @special_dark-grey;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 151px;
+    padding-left: 0;
+    width: 245px;
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
