--- a/source/less/blocks/heading-primary.less
+++ b/source/less/blocks/heading-primary.less
@@ -6,11 +6,14 @@
   color: @basic-black;
 
   &--m-white {
-    margin: 0;
-    padding-top: 27px;
-    padding-bottom: 25px;
-
     color: @basic-white;
-    text-align: center;
+    // text-align: center;
+  }
+
+  @media (min-width: @tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    color: @basic-black;
+    text-align: left;
   }
 }
