--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,10 +1,54 @@
 .page-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0 auto;
   background-color: @basic-white;
   border-bottom: 1px solid @spesial-grey-3;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 0 auto;
+    padding-top: 26px;
+    // width: 709px;
+    border: none;
+
+    .main-nav__toggle {
+      display: none;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    // position: absolute;
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    padding-top: 69px;
+    // padding-left: 110px;
+    width: 1220px;
+    background: transparent;
+  }
 }
 
 .page-header__logo {
-  padding-top: 10px;
-  padding-right: 20px;
-  padding-left: 20px;
+  width: 191px;
+  height: 37px;
+
+  @media (min-width: @tablet-width) {
+    width: 174px;
+    height: 52px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 202px;
+    height: 59px;
+  }
+}
+
+.main-nav__toggle {
+  position: absolute;
+  right: 0;
+  top: 0;
 }
