--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -7,8 +7,7 @@
 }
 
 .page__body {
-  width: 320px;
-  margin: 0 auto;
+  position: relative;
   min-height: 100%;
-  // margin: 0;
+  margin: 0;
 }
