--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -1,28 +1,77 @@
 .promo {
-  position: relative;
+  margin: 0 auto;
   margin-bottom: 22px;
+  position: relative;
+  text-align: center;
 
-  &::before {
+  background: url("../img/promo-bg-img-m.png");
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+
+  &::after {
     content: "";
     position: absolute;
-    z-index: -2;
-    width: 563px;
+    top: 0;
+    left: 0;
+    z-index: 0;
+
+    width: 100%;
     height: 302px;
-    background-image: url("../img/promo-bg-img-m.png");
-    background-repeat: no-repeat;
+
+    background-color: rgba(@basic-green, 0.85);
+
+    @media (min-width: @tablet-width) {
+      background: none;
+    }
+
+    @media (min-width: @desktop-width) {
+      width: 720px;
+      min-height: 694px;
+      z-index: -1;
+      background-color: rgba(@basic-green, 0.85);
+      left: 720px;
+      top: -130px;
+      // right: 0;
+    }
+  }
+
+  @media (min-width: @tablet-width) {
+    margin: 0 auto;
+    width: 709px;
+    background-image: none;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1220px;
+    min-height: 694px;
   }
 }
 
 .promo__wrapper {
-  &::before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    width: 100%;
-    height: 302px;
+  position: relative;
+  z-index: 2;
 
-    background-color: @basic-green;
-    opacity: 0.85;
+  @media (min-width: @desktop-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    // padding-left: 88px;
+    width: 1222px;
+  }
+}
+
+.promo__title {
+  margin: 0 auto;
+  padding-top: 27px;
+  padding-bottom: 25px;
+  width: 249px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+    width: 414px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 111px;
   }
 }
 
@@ -42,24 +91,60 @@
   &--m-white {
     color: @basic-white;
   }
+
+  @media (min-width: @tablet-width) {
+    padding-left: 0;
+    font-size: 20px;
+    line-height: 20px;
+    color: @basic-black;
+    text-align: left;
+  }
 }
 
 .promo__image {
   padding-right: 20px;
   padding-left: 20px;
-  padding-bottom: 3px;
+  margin-bottom: 3px;
   width: 280px;
   height: 270px;
   box-sizing: content-box;
+
+  @media (min-width: @tablet-width) {
+    width: 709px;
+    height: 609px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 552px;
+    height: 499px;
+  }
 }
 
 .promo__button-wrapper {
   margin: 0;
+  margin-bottom: 22px;
   padding-left: 20px;
   padding-right: 20px;
+
+  @media (min-width: @tablet-width) {
+    position: absolute;
+    z-index: 3;
+    top: 250px;
+  }
+
+  @media (min-width: @desktop-width) {
+    top: 300px;
+    padding-left: 88px;
+    width: 244px;
+  }
 }
 
 .promo__button {
-  width: 280px;
   padding: 7px 44px;
+  width: 280px;
+
+  @media (min-width: @tablet-width) {
+    padding: 14px 26px;
+    width: 244px;
+  }
 }
