--- a/source/less/blocks/select-programm.less
+++ b/source/less/blocks/select-programm.less
@@ -1,14 +1,39 @@
+.select-programm-wrapper {
+  @media (min-width: @desktop-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 80px;
+    margin: 0 auto;
+    width: 1222px;
+  }
+}
+
 .select-programm {
   margin-bottom: 20px;
   padding-right: 20px;
   padding-left: 20px;
 }
 
-.select-programm__wrapper {
+.select-programm__wrapper-block {
+  margin: 0 auto;
   padding-top: 30px;
+  padding-left: 20px;
   padding-bottom: 22px;
   width: 280px;
   background-color: @basic-grey;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 77px;
+    padding-bottom: 53px;
+    padding-left: 53px;
+    width: 708px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 55px;
+    padding-left: 52px;
+    width: 570px;
+  }
 }
 
 .select-programm__title {
@@ -21,20 +46,31 @@
   line-height: 37px;
   text-transform: uppercase;
   text-align: center;
+
+  @media (min-width: @tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+    text-align: left;
+  }
 }
 
 .select-programm__description {
   margin: 0;
   margin-bottom: 38px;
-  padding-left: 20px;
   width: 227px;
 
   color: @special_dark-grey;
+
+  @media (min-width: @tablet-width) {
+    width: 340px;
+    font-size: 16px;
+    line-height: 24px;
+    color: @basic-black;
+  }
 }
 
 .select-programm__link {
   display: block;
-  padding-left: 19px;
 
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
