--- a/source/less/style.less
+++ b/source/less/style.less
@@ -6,7 +6,7 @@
 @import "global/fonts.less";
 @import "global/global.less";
 @import "global/variables.less";
-@import "global/center.less";
+@import "global/container.less";
 
 // Blocks
 
