--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,29 +1,33 @@
 .page-footer {
-  padding-top: 39px;
-  padding-right: 20px;
-  padding-bottom: 22px;
-  padding-left: 20px;
   background-color: @basic-grey;
 }
 
 .page-footer__wrapper {
+  padding-top: 39px;
+  padding-bottom: 22px;
+
   @media (min-width: @tablet-width) {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 55px;
+    padding-bottom: 61px;
   }
 }
 
-.page-footer__logo-text {
+.page-footer__col-1 {
   padding-bottom: 32px;
   text-align: center;
   border-bottom: 1px solid @spesial-grey-3;
 
   @media (min-width: @tablet-width) {
+    padding: 0;
+    text-align: left;
     border: none;
   }
 }
 
-.page-footer__copyright {
+.page-footer__col-3 {
   display: flex;
   justify-content: space-between;
   align-items: center;
