--- a/source/less/blocks/result.less
+++ b/source/less/blocks/result.less
@@ -2,36 +2,25 @@
   background-color: @special-grey-4;
 
   @media (min-width: @tablet-width) {
-    background-color: @basic-white;
+    background: linear-gradient(to bottom, @basic-white 619px, @special-grey-4 619px, @special-grey-4);
     border-top: 1px solid @special-grey-2;
   }
 
   @media (min-width: @desktop-width) {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    min-height: 462px;
-    background-color: @basic-grey;
+    background: linear-gradient(to bottom, @basic-white 194px, @basic-grey 194px, @basic-grey);
     border: none;
   }
 }
 
 .result__wrapper {
-  margin: 0 auto;
-  width: 320px;
-  padding-top: 27px;
-  padding-right: 20px;
-  padding-left: 20px;
-
-  @media (min-width: @tablet-width) {
-    width: 708px;
-  }
-
   @media (min-width: @desktop-width) {
-    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding-top: 58px;
   }
 }
 
-.result__wrapper-box-list {
+.result__wrapper-list {
   @media (min-width: @tablet-width) {
     display: grid;
     grid-template-columns: 2fr 1fr;
@@ -42,6 +31,7 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 0;
+    width: 436px;
   }
 }
 
@@ -50,8 +40,7 @@
   margin-bottom: 33px;
 
   @media (min-width: @desktop-width) {
-    position: absolute;
-    top: -130px;
+    margin-bottom: 146px;
   }
 }
 
@@ -143,10 +132,6 @@
   margin-bottom: 42px;
 
   font-family: "Oswald", "Arial", sans-serif;
-
-  @media (min-width: @desktop-width) {
-    // display: flex;
-  }
 }
 
 .result__total-text {
@@ -173,13 +158,6 @@
 .result__image-box {
   position: relative;
 
-  @media (min-width: @tablet-width) {
-    margin: 0 auto;
-    width: 100%;
-    min-height: 462px;
-    background-color: @special-grey-4;
-  }
-
   @media (min-width: @desktop-width) {
     background: none;
   }
@@ -189,28 +167,11 @@
   position: relative;
   margin: 0 auto;
   width: 320px;
-  // min-height: 232px;
-
-  @media (min-width: @tablet-width) {
-    position: absolute;
-    top: -100px;
-    left: 290px;
-    width: 708px;
-    margin: 0 auto;
-  }
-
-  @media (min-width: @desktop-width) {
-    left: 0;
-  }
 }
 
 .result__image-before {
   position: relative;
   z-index: 1;
-
-  @media (min-width: @tablet-width) {
-    left: 200px;
-  }
 }
 
 .result__image-after {
@@ -219,13 +180,7 @@
   left: 40px;
   z-index: 0;
 
-  @media (min-width: @tablet-width) {
-    top: 0;
-    left: 240px;
-  }
-
   @media (min-width: @desktop-width) {
-    width: 325px;
     background-color: @special-grey-4;
   }
 }
@@ -241,8 +196,6 @@
   width: 288px;
 
   @media (min-width: @tablet-width) {
-    margin: 0 auto;
-    top: 340px;
     width: 571px;
   }
 }
