Адаптивная сетка для страницы с формой

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -2,10 +2,6 @@
   padding-top: 28px;
   padding-bottom: 26px;
 
-  &--background {
-    background-color: @basic-grey;
-  }
-
   @media (min-width: @tablet-width) {
     padding-top: 66px;
     padding-bottom: 51px;
@@ -19,6 +15,10 @@
     min-height: 201px;
     background-color: @basic-white;
   }
+}
+
+.contacts-background {
+  background-color: @basic-grey;
 }
 
 .contacts__wrapper {
