--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -83,3 +83,9 @@
     color: @basic-white;
   }
 }
+
+.main-nav__item-inner a {
+  @media (min-width: @desktop-width) {
+    color: @basic-black;
+  }
+}
