--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -22,6 +22,12 @@
       rgba(@basic-green, 0.85)
     );
   }
+
+  &--inner-form {
+    @media (min-width: @desktop-width) {
+      background: @basic-white;
+    }
+  }
 }
 
 .page-header__wrapper {
