--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,7 +1,5 @@
 .form {
   margin-bottom: 32px;
-  padding-right: 20px;
-  padding-left: 20px;
 }
 
 .form__title {
@@ -10,6 +8,12 @@
   font-weight: 400;
   line-height: 18px;
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+    width: 323px;
+  }
 }
 
 .form__field {
@@ -23,6 +27,18 @@
     padding-bottom: 19px;
     border-top: 1px solid @spesial-grey-3;
     border-bottom: 1px solid @spesial-grey-3;
+
+    @media (min-width: @tablet-width) {
+      border: 1px solid @special-border-input;
+    }
+  }
+}
+
+.form__field-col-1 {
+  @media (min-width: @desktop-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 80px;
   }
 }
 
@@ -32,6 +48,22 @@
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
   line-height: 26px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+  }
+}
+
+.form__field-wrapper-checkbox {
+  @media (min-width: @tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 .form__input-wrapper,
@@ -40,12 +72,23 @@
   margin: 0;
 }
 
+.form__input-wrapper {
+  display: flex;
+  align-items: center;
+}
+
 .form__input-wrapper:not(:last-child) {
   margin-bottom: 14px;
 }
 
 .form__radio-wrapper:not(:last-child) {
   margin-bottom: 19px;
+}
+
+.form__radio-wrapper {
+  @media (min-width: @tablet-width) {
+    padding-left: 28px;
+  }
 }
 
 .form__checkbox-wrapper:not(:last-child) {
@@ -59,6 +102,11 @@
   line-height: 18px;
   color: @special_dark-grey;
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 29px;
+  }
 }
 
 .form__radio-label {
@@ -76,6 +124,7 @@
   padding-bottom: 15px;
   padding-left: 14px;
   border: 1px solid @special-border-input;
+  width: 100%;
 
   &:hover {
     border-color: @special-grey;
@@ -124,6 +173,23 @@
   &::placeholder {
     color: @special_dark-grey;
   }
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+    width: 100%;
+  }
+}
+
+.form__button-wrapper {
+  @media (min-width: @tablet-width) {
+    display: flex;
+    gap: 61px;
+  }
+
+  @media (min-width: @desktop-width) {
+    gap: 81px;
+  }
 }
 
 .form__button {
@@ -134,9 +200,24 @@
   font-size: 16px;
   line-height: 20px;
   border: none;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    padding-top: 13px;
+    padding-bottom: 13px;
+    width: 282px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 568px;
+  }
 }
 
 .form__obligatory {
   line-height: 16px;
   text-align: center;
+
+  @media (min-width: @tablet-width) {
+    font-size: 16px;
+  }
 }
