--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -1,4 +1,5 @@
 .promo {
+  position: relative;
   margin-bottom: 22px;
   text-align: center;
 
@@ -9,7 +10,7 @@
   &::after {
     content: "";
     position: absolute;
-    top: 243px;
+    top: 0;
     left: 0;
     z-index: 0;
 
