--- a/source/less/global/container.less
+++ b/source/less/global/container.less
@@ -12,4 +12,10 @@
     padding: 0 110px;
     max-width: 1440px;
   }
+
+  &--padding {
+    @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
+      padding: 0 70px;
+    }
+  }
 }
