--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,14 +1,33 @@
+.catalog {
+  @media (min-width: @tablet-width) {
+    padding-top: 163px;
+  }
+}
+
 .catalog__list {
   margin: 0;
   padding: 0;
   list-style: none;
+
+  @media (min-width: @tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 60px;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 80px;
+  }
 }
 
 .catalog__item {
   padding-top: 8px;
   padding-bottom: 11px;
-  padding-right: 20px;
-  padding-left: 20px;
   border-top: 1px solid @special-grey-5;
   border-bottom: 1px solid @special-grey-5;
+
+  @media (min-width: @tablet-width) {
+    border: none;
+  }
 }
