--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -1,5 +1,39 @@
+.product {
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 81px;
+    width: 324px;
+    min-height: 430px;
+    background-color: @basic-grey;
+
+    &--all {
+      padding: 0 79px;
+      padding-top: 161px;
+      background-color: transparent;
+      border: 2px solid @basic-grey;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 84px;
+    width: 245px;
+  }
+}
+
 .product__title {
-  // width: 76px;
+  @media (min-width: @tablet-width) {
+    margin-bottom: 21px;
+  }
+}
+
+.product__image {
+  @media (min-width: @tablet-width) {
+    position: relative;
+    top: -30px;
+    order: -1;
+  }
 }
 
 .product__title-link {
@@ -9,6 +43,11 @@
   line-height: 20px;
   color: @special_dark-grey-2;
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 24px;
+  }
 }
 
 .product__title-all {
@@ -20,8 +59,30 @@
   line-height: 16px;
   color: @special_dark-grey;
 
+  @media (min-width: @tablet-width) {
+    width: 251px;
+    margin-bottom: 33px;
+    font-size: 16px;
+    border-collapse: collapse;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 169px;
+  }
+
   &--all {
+    margin: 0;
     text-align: center;
+  }
+}
+
+.product__parameters tr {
+  @media (min-width: @tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 9px;
+    padding-bottom: 5px;
+    border-bottom: 1px solid @special-grey;
   }
 }
 
@@ -32,9 +93,17 @@
   padding-bottom: 10px;
   font-size: 16px;
   line-height: 20px;
-}
 
-.product__button--all {
-  background-color: @basic-grey;
-  color: @special_dark-grey;
+  @media (min-width: @tablet-width) {
+    width: 248px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 168px;
+  }
+
+  &--all {
+    background-color: @basic-grey;
+    color: @special_dark-grey;
+  }
 }
