--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -2,8 +2,6 @@
   background-color: @basic-white;
 
   @media (min-width: @tablet-width) {
-    // display: grid;
-    // margin: 0 auto;
     padding-top: 26px;
     border: none;
 
@@ -40,11 +38,13 @@
 
 .page-header__logo {
   padding-top: 10px;
-  padding-right: 65px;
+  // padding-right: 65px;
+  margin-right: 65px;
   padding-bottom: 17px;
 
   @media (min-width: @tablet-width) {
-    padding-right: 95px;
+    // padding-right: 95px;
+    margin-right: 95px;
   }
 }
 
