--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -2,30 +2,23 @@
   position: relative;
   margin-bottom: 22px;
   text-align: center;
-
-  background-image: url("../img/promo-bg-img-m.png");
-  background-repeat: no-repeat;
-  background-position: 50% 0;
+  z-index: 1;
 
   &::after {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 0;
+    z-index: -1;
 
     width: 100%;
     height: 302px;
 
-    background-color: rgba(@basic-green, 0.85);
+    background-color: #64a73c; // сделать функцией
 
     @media (min-width: @tablet-width) {
       background: none;
     }
-  }
-
-  @media (min-width: @tablet-width) {
-    background-image: none;
   }
 
   @media (min-width: @desktop-width) {
@@ -36,6 +29,14 @@
 .promo__wrapper {
   position: relative;
   z-index: 2;
+
+  background-image: url("../img/promo-bg-img-m1.png");
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+
+  @media (min-width: @tablet-width) {
+    background-image: none;
+  }
 
   @media (min-width: @desktop-width) {
     display: grid;
@@ -123,5 +124,7 @@
   @media (min-width: @tablet-width) {
     padding: 14px 26px;
     width: 244px;
+    font-size: 20px;
+    line-height: 20px;
   }
 }
