Исправления ошибок центровщика в header для мобил

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -41,10 +41,12 @@
   // padding-right: 65px;
   margin-right: 65px;
   padding-bottom: 17px;
+  padding-left: 20px;
 
   @media (min-width: @tablet-width) {
     // padding-right: 95px;
     margin-right: 95px;
+    padding: 0;
   }
 }
 
