--- a/source/less/global/container.less
+++ b/source/less/global/container.less
@@ -3,6 +3,11 @@
   margin: 0 auto;
   max-width: 320px;
 
+  &--mob-100 {
+    padding: 0;
+    max-width: 100%;
+  }
+
   @media (min-width: @tablet-width) {
     padding: 0 30px;
     max-width: 768px;
@@ -17,12 +22,5 @@
     @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
       padding: 0 70px;
     }
-  }
-}
-
-.container-nav {
-  @media (max-width: @mobile-width-only) {
-    padding: 0;
-    width: 100%;
   }
 }
