--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -12,4 +12,15 @@
   vertical-align: middle;
   box-sizing: border-box;
   cursor: pointer;
+
+  &:hover {
+    background-color: @basic-green-2;
+  }
+
+  &:active {
+    color: rgba(@basic-white, 0.3);
+  }
 }
+
+
+// @basic-green-2
