--- a/source/less/blocks/select-programm.less
+++ b/source/less/blocks/select-programm.less
@@ -1,13 +1,24 @@
 .select-programm-wrapper {
+  margin-bottom: 27px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 45px;
+  }
+
   @media (min-width: @desktop-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 80px;
+    margin-bottom: 71px;
   }
 }
 
 .select-programm {
   margin-bottom: 20px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 30px;
+  }
 }
 
 .select-programm__wrapper-block {
@@ -26,14 +37,84 @@
 
   @media (min-width: @desktop-width) {
     padding-bottom: 55px;
-    padding-right: 52px;
+    padding-right: 61px;
     padding-left: 52px;
     width: 570px;
   }
 }
 
+.select-programm__image-skinny {
+  position: relative;
+
+  &::before {
+    @media (max-width: @mobile-width-only) {
+      content: "";
+      position: absolute;
+      top: 24px;
+      left: 13px;
+      width: 67px;
+      height: 50px;
+      background-image: url("../../img/svg/cat-sitting.svg");
+      background-size: 67px 50px;
+    }
+
+    @media (min-width: @tablet-width) {
+      content: "";
+      position: absolute;
+      width: 200px;
+      height: 211px;
+      right: 62px;
+      background-image: url("../../img/svg/cat-sitting.svg");
+    }
+
+    @media (min-width: @desktop-width) {
+      top: 41px;
+      left: 52px;
+      width: 100px;
+      height: 106px;
+      background-size: 100px 106px;
+    }
+  }
+}
+
+.select-programm__image-weight {
+  position: relative;
+
+  &::before {
+    @media (max-width: @mobile-width-only) {
+      content: "";
+      position: absolute;
+      top: 24px;
+      left: 13px;
+      width: 67px;
+      height: 50px;
+      background-image: url("../../img/svg/cat-going.svg");
+      background-size: 67px 50px;
+    }
+
+    @media (min-width: @tablet-width) {
+      content: "";
+      position: absolute;
+      width: 268px;
+      height: 200px;
+      right: 27px;
+      background-image: url("../../img/svg/cat-going.svg");
+    }
+
+    @media (min-width: @desktop-width) {
+      top: 47px;
+      left: 33px;
+      // width: 134px;
+      // height: 100px;
+      background-size: 134px 100px;
+      background-repeat: no-repeat;
+    }
+  }
+}
+
 .select-programm__title {
   margin: 0;
+  margin-left: 19px;
   margin-bottom: 29px;
 
   font-family: "Oswald", "Arial", sans-serif;
@@ -43,30 +124,62 @@
   text-transform: uppercase;
   text-align: center;
 
+  &--margin {
+    margin-left: 37px;
+  }
+
   @media (min-width: @tablet-width) {
+    margin-left: 0;
+    margin-bottom: 24px;
     font-size: 36px;
     line-height: 36px;
     text-align: left;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 73px;
+    margin-left: 162px;
+  }
 }
 
 .select-programm__description {
+  position: relative;
   margin: 0;
   margin-bottom: 38px;
   width: 227px;
 
   color: @special_dark-grey;
 
+  @media (max-width: @mobile-width-only) {
+    &::after {
+      content: "";
+      position: absolute;
+      top: 110px;
+      left: 0;
+      width: 240px;
+      height: 1px;
+      background-color: @spesial-grey-3;
+    }
+  }
+
   @media (min-width: @tablet-width) {
+    margin-bottom: 48px;
     width: 340px;
     font-size: 16px;
     line-height: 24px;
     color: @basic-black;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 23px;
+    width: 467px;
+  }
 }
 
 .select-programm__link {
+  position: relative;
   display: block;
+  width: 132px;
 
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
@@ -76,4 +189,25 @@
 
   text-transform: uppercase;
   text-decoration: none;
+
+  @media (min-width: @tablet-width) {
+    width: 168px;
+    font-size: 20px;
+    line-height: 29px;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 2px;
+    left: 102px;
+    width: 24px;
+    height: 12px;
+    background-image: url("../../img/svg/arrow.svg");
+
+    @media (min-width: @tablet-width) {
+      top: 8px;
+      left: 133px;
+    }
+  }
 }
