--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,6 +1,8 @@
 .social__list {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 33px;
   margin: 0;
   padding: 0;
   padding-top: 20px;
@@ -14,20 +16,5 @@
     gap: 28px;
     padding: 0;
     border: none;
-  }
-}
-
-.social__item {
-  position: relative;
-  width: 28px;
-  height: 22px;
-
-  &::before {
-    content: "";
-    position: absolute;
-    width: 15px;
-    height: 15px;
-    border: 2px solid @spesial-grey-3;
-    cursor: pointer;
   }
 }
