--- a/source/less/global/container.less
+++ b/source/less/global/container.less
@@ -14,8 +14,10 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 0 110px;
-    max-width: 1440px;
+    // padding: 0 110px;
+    // max-width: 1440px;
+    padding: 0 30px;
+    max-width: 1280px;
   }
 
   &--padding {
