--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -3,8 +3,8 @@
 
 @mobile-width-only: 767px;
 @tablet-width: 768px;
-@tablet-width-only: 1439px;
-@desktop-width: 1440px;
+@tablet-width-only: 1279px; //1439px
+@desktop-width: 1280px; //1440px
 
 // Colors
 
@@ -26,3 +26,6 @@
 @special_dark-grey: rgba(68, 68, 68, 1);
 @special_dark-grey-2: rgba(34, 34, 34, 1);
 @status-error: rgba(255, 130, 130, 1);
+@bg-promo-desktop: rgba(100, 167, 59, 1);
+@range-track: rgba(220, 220, 220, 1);
+
