Исправления в блоках result, address. Адаптивные элементы в странице каталога

--- a/source/less/blocks/application.less
+++ b/source/less/blocks/application.less
@@ -78,19 +78,19 @@
   }
 
   &--method {
-    background-image: url("../../img/svg/method.svg");
+    background-image: url("../img/svg/method.svg");
     background-repeat: no-repeat;
     background-position: 16px 14px;
   }
 
   &--serve {
-    background-image: url("../../img/svg/serve.svg");
+    background-image: url("../img/svg/serve.svg");
     background-repeat: no-repeat;
     background-position: 17px 14px;
   }
 
   &--clock {
-    background-image: url("../../img/svg/clock.svg");
+    background-image: url("../img/svg/clock.svg");
     background-repeat: no-repeat;
     background-position: 16px 14px;
   }
