--- a/source/less/blocks/heading-primary.less
+++ b/source/less/blocks/heading-primary.less
@@ -10,6 +10,19 @@
     // text-align: center;
   }
 
+  &--catalog {
+    margin-top: 27px;
+    margin-bottom: 49px;
+
+    @media (min-width: @tablet-width) {
+      margin-bottom: 82px;
+    }
+
+    @media (min-width: @desktop-width) {
+      margin-bottom: 84px;
+    }
+  }
+
   @media (min-width: @tablet-width) {
     font-size: 60px;
     line-height: 60px;
