--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,6 +1,6 @@
 .catalog {
   @media (min-width: @tablet-width) {
-    padding-top: 163px;
+    // padding-top: 163px;
   }
 }
 
@@ -22,12 +22,39 @@
 }
 
 .catalog__item {
+  position: relative;
   padding-top: 8px;
   padding-bottom: 11px;
-  border-top: 1px solid @special-grey-5;
-  border-bottom: 1px solid @special-grey-5;
+  // border-top: 1px solid @special-grey-5;
+  // border-bottom: 1px solid @special-grey-5;
 
   @media (min-width: @tablet-width) {
     border: none;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: @special-grey-5;
+
+    @media (min-width: @tablet-width) {
+      display: none;
+    }
+  }
+}
+
+.catalog__item:first-child::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background-color: @special-grey-5;
+
+  @media (min-width: @tablet-width) {
+    display: none;
   }
 }
