--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -10,6 +10,7 @@
   @media (min-width: @desktop-width) {
     position: absolute;
     margin-top: 95px;
+    z-index: 3;
     left: 110px;
     width: 570px;
     min-height: 201px;
