--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -16,6 +16,10 @@
   background-color: transparent;
   cursor: pointer;
   border: none;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
 }
 
 .main-nav--closed .main-nav__toggle::before {
