--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,6 +1,44 @@
+.map {
+  position: relative;
+  min-height: 362px;
+
+  @media (min-width: @tablet-width) {
+    min-height: 400px;
+  }
+}
+
+.map__wrapper {
+  position: relative;
+  height: 100%;
+}
+
+.map__wrapper iframe {
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  min-height: 362px;
+
+  @media (min-width: @tablet-width) {
+    min-height: 400px;
+  }
+}
+
+.map__image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+}
+
 .map__image img {
-  object-fit: cover;
+  display: block;
   margin: 0 auto;
   width: 100%;
-  height: 362px;
+  min-height: 362px;
+  object-fit: cover;
+
+  @media (min-width: @tablet-width) {
+    min-height: 400px;
+  }
 }
