--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -2,16 +2,13 @@
   background-color: @basic-white;
 
   @media (min-width: @tablet-width) {
+    margin-bottom: 64px;
     padding-top: 26px;
     border: none;
-
-    .main-nav__toggle {
-      display: none;
-    }
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 82px;
+    margin-bottom: 74px;
     padding-top: 69px;
     min-height: 694px;
     // background-image: linear-gradient(
@@ -26,7 +23,7 @@
         transparent 50%,
         transparent
       ),
-      url("../../img/bg-promo-desktop.png"),
+      url("../img/bg-promo-desktop.png"),
       linear-gradient(to right, @bg-promo-desktop, @bg-promo-desktop);
 
     background-position: 0 0, right -2px, 0 -1px;
@@ -35,7 +32,20 @@
 
   &--inner-form {
     @media (min-width: @desktop-width) {
+      min-height: 0;
       background: @basic-white;
+    }
+  }
+
+  &--inner-form::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background-color: @spesial-grey-3;
+
+    @media (min-width: @tablet-width) {
+      display: none;
     }
   }
 }
