--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -1,38 +1,118 @@
 .product {
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
   @media (min-width: @tablet-width) {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 81px;
+    // margin-bottom: 60px;
     width: 324px;
-    min-height: 430px;
-    background-color: @basic-grey;
-
-    &--all {
-      padding: 0 79px;
-      padding-top: 161px;
-      background-color: transparent;
-      border: 2px solid @basic-grey;
-    }
+    min-height: 511px;
+    // background-color: @basic-grey;
+    background: linear-gradient(
+      to bottom,
+      @basic-white 81px,
+      @basic-grey 81px,
+      @basic-grey
+    );
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 84px;
+    // margin-bottom: 84px;
     width: 245px;
+    min-height: 512px;
+  }
+
+  &--all {
+    grid-template-columns: 1fr;
+    position: relative;
+    padding-top: 73px;
+    min-height: 158px;
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      top: 39px;
+      left: 125px;
+      width: 30px;
+      height: 1px;
+      background-color: @special-grey-6;
+    }
+
+    &::after {
+      transform: rotate(90deg);
+    }
+
+    @media (min-width: @tablet-width) {
+      margin-top: 81px;
+      padding: 0 79px;
+      padding-top: 151px;
+      height: 429px;
+      background: transparent;
+      border: 2px solid @basic-grey;
+    }
+
+    @media (min-width: @desktop-width) {
+      padding: 0 39px;
+      padding-top: 151px;
+    }
   }
 }
 
 .product__title {
+  grid-column: ~"2/3";
+  padding-right: 65px;
+
   @media (min-width: @tablet-width) {
+    padding: 0;
+    width: 145px;
+    text-align: center;
     margin-bottom: 21px;
   }
 }
 
 .product__image {
+  display: flex;
+  justify-content: center;
+  grid-row: ~"1/3";
+  padding-top: 32px;
+
   @media (min-width: @tablet-width) {
-    position: relative;
-    top: -30px;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: flex-start;
+    align-items: center;
+    // padding-bottom: 34px;
+    width: 162px;
+    height: 206px;
     order: -1;
+  }
+}
+
+.product__image img {
+  @media (min-width: @tablet-width) {
+    width: 161px;
+    height: 172px;
+  }
+}
+
+.product__image--max img {
+  @media (min-width: @tablet-width) {
+    // width: 168px;
+    height: 207px;
+  }
+}
+
+.product__title-all {
+  margin: 0;
+  margin-bottom: 8px;
+  text-align: center;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 25px;
   }
 }
 
@@ -50,11 +130,8 @@
   }
 }
 
-.product__title-all {
-  text-align: center;
-}
-
 .product__parameters {
+  margin-bottom: 22px;
   font-size: 12px;
   line-height: 16px;
   color: @special_dark-grey;
@@ -72,14 +149,23 @@
 
   &--all {
     margin: 0;
+    margin-bottom: 21px;
     text-align: center;
+
+    @media (min-width: @tablet-width) {
+      width: 167px;
+      margin-bottom: 93px;
+    }
   }
 }
 
 .product__parameters tr {
+  display: flex;
+  justify-content: space-between;
+
   @media (min-width: @tablet-width) {
-    display: flex;
-    justify-content: space-between;
+    // display: flex;
+    // justify-content: space-between;
     padding-top: 9px;
     padding-bottom: 5px;
     border-bottom: 1px solid @special-grey;
@@ -87,6 +173,7 @@
 }
 
 .product__button {
+  grid-column: ~"1/-1";
   margin-bottom: 14px;
   width: 280px;
   padding-top: 10px;
@@ -105,5 +192,14 @@
   &--all {
     background-color: @basic-grey;
     color: @special_dark-grey;
+
+    &:hover {
+      background-color: @special-grey-5;
+    }
+
+    &:active {
+      color: rgba(@basic-black, 0.3);
+      background-color: @special-grey-5;
+    }
   }
 }
