--- a/source/less/blocks/select-programm.less
+++ b/source/less/blocks/select-programm.less
@@ -54,7 +54,7 @@
       left: 13px;
       width: 67px;
       height: 50px;
-      background-image: url("../../img/svg/cat-sitting.svg");
+      background-image: url("../img/svg/cat-sitting.svg");
       background-size: 67px 50px;
     }
 
@@ -64,7 +64,7 @@
       width: 200px;
       height: 211px;
       right: 62px;
-      background-image: url("../../img/svg/cat-sitting.svg");
+      background-image: url("../img/svg/cat-sitting.svg");
     }
 
     @media (min-width: @desktop-width) {
@@ -88,7 +88,7 @@
       left: 13px;
       width: 67px;
       height: 50px;
-      background-image: url("../../img/svg/cat-going.svg");
+      background-image: url("../img/svg/cat-going.svg");
       background-size: 67px 50px;
     }
 
@@ -98,7 +98,7 @@
       width: 268px;
       height: 200px;
       right: 27px;
-      background-image: url("../../img/svg/cat-going.svg");
+      background-image: url("../img/svg/cat-going.svg");
     }
 
     @media (min-width: @desktop-width) {
@@ -203,11 +203,15 @@
     left: 102px;
     width: 24px;
     height: 12px;
-    background-image: url("../../img/svg/arrow.svg");
+    background-image: url("../img/svg/arrow.svg");
 
     @media (min-width: @tablet-width) {
       top: 8px;
       left: 133px;
     }
+  }
+
+  &:active {
+    color: rgba(@basic-black, 0.3);
   }
 }
