--- a/source/less/style.less
+++ b/source/less/style.less
@@ -18,6 +18,7 @@
 @import "blocks/select-programm.less";
 @import "blocks/application.less";
 @import "blocks/result.less";
+@import "blocks/address.less";
 @import "blocks/contacts.less";
 @import "blocks/page-footer.less";
 @import "blocks/catalog.less";
