--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -31,7 +31,14 @@
   }
 
   &--inner-form {
+    margin-bottom: 27px;
+
+    @media (min-width: @tablet-width) {
+      margin-bottom: 64px;
+    }
+
     @media (min-width: @desktop-width) {
+      margin-bottom: 73px;
       min-height: 0;
       background: @basic-white;
     }
