--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -1,5 +1,9 @@
 .additional-products {
   margin-bottom: 35px;
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 86px;
+  }
 }
 
 .additional-products__wrapper {
@@ -11,65 +15,113 @@
 }
 
 .additional-products__title {
+  position: relative;
+  margin: 0;
+  margin-bottom: 36px;
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
   font-weight: 400;
   line-height: 24px;
 
+  // &::before,
+  // &::after {
+  //   content: "";
+  //   position: absolute;
+  //   margin-left: 22px;
+  //   top: 15px;
+  //   width: 100%;
+  //   height: 2px;
+  //   background-color: @basic-green;
+
+  //   @media (min-width: @tablet-width) {
+  //     margin-left: 36px;
+  //     top: 22px;
+  //   }
+  // }
+
+  // &::before {
+  //   display: none;
+
+  //   @media (min-width: @tablet-width) {
+  //     display: block;
+  //     left: -391px;
+  //     width: 50%;
+  //   }
+
+  //   @media (min-width: @desktop-width) {
+  //     left: -700px;
+  //   }
+  // }
+
   @media (min-width: @tablet-width) {
+    padding-left: 36px;
     font-size: 36px;
     line-height: 36px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 0;
   }
 }
 
 .additional-products__parameter {
-  margin-bottom: 36px;
-  border-bottom: 1px solid @special-grey;
+  margin-bottom: 35px;
+  border-collapse: collapse;
 
   @media (min-width: @tablet-width) {
     border-collapse: collapse;
-    // border: 1px solid @special-grey;
     width: 100%;
   }
 
   @media (min-width: @desktop-width) {
     border: none;
-    // border-top: 1px solid @special-grey;
+    margin-bottom: 0;
   }
 }
 
 .additional-products__parameter tr {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding-bottom: 19px;
+  border-top: 1px solid @special-grey;
 
   @media (min-width: @tablet-width) {
     // display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    // flex-direction: row;
+    // flex-wrap: wrap;
+    padding-top: 26px;
+    padding-right: 38px;
+    padding-bottom: 28px;
+    padding-left: 38px;
     border: 1px solid @special-grey;
+    border-bottom: 0;
   }
 
   @media (min-width: @desktop-width) {
-    padding-top: 25px;
-    padding-bottom: 27px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    padding-top: 15px;
+    padding-bottom: 17px;
     border: none;
     border-top: 1px solid @special-grey;
   }
 }
 
 .additional-products__parameter tr:last-child {
+  border-bottom: 1px solid @special-grey;
+
   @media (min-width: @desktop-width) {
     border-bottom: 1px solid @special-grey;
   }
 }
 
-// .additional-products__parameter td {
-//   // padding-bottom: 13px;
-// }
-
 .additional-products__table-name {
-  // padding-top: 13px;
+  margin-bottom: 13px;
+  padding-top: 13px;
   width: 100%;
 
   font-family: "Oswald", "Arial", sans-serif;
@@ -78,17 +130,26 @@
   color: @special_dark-grey-2;
   text-transform: uppercase;
 
-  border-top: 1px solid @special-grey;
+  // border-top: 1px solid @special-grey;
 
   @media (min-width: @tablet-width) {
-    width: auto;
+    margin-bottom: 25px;
+    padding: 0;
+    width: 50%;
     font-size: 20px;
     line-height: 20px;
     border-top: none;
   }
+
+  @media (min-width: @desktop-width) {
+    margin: 0;
+    width: 36%;
+  }
 }
 
 .additional-products__table-data {
+  margin-bottom: 15px;
+  width: 50%;
   font-family: "Arial", "Oswald", sans-serif;
   font-size: 14px;
   line-height: 14px;
@@ -96,23 +157,49 @@
 
   @media (min-width: @tablet-width) {
     align-self: flex-end;
+    padding-bottom: 6px;
+    // width: 25%;
     font-size: 16px;
     line-height: 16px;
   }
 
   @media (min-width: @desktop-width) {
-    line-height: 20px;
+    align-self: center;
+    margin: 0;
+    padding-bottom: 0;
+    width: 18%;
   }
 }
 
-// .additional-products__parameter td:last-child {
-//   // padding-bottom: 19px;
-// }
+.additional-products__table-data:nth-child(2) {
+  @media (min-width: @tablet-width) {
+    width: 35%;
+    text-align: right;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 25%;
+    text-align: left;
+  }
+}
+
+.additional-products__table-data:nth-child(3) {
+  text-align: right;
+
+  @media (min-width: @tablet-width) {
+    width: 15%;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 18px;
+    width: 10%;
+    text-align: left;
+  }
+}
 
 .additional-products__button {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  width: 280px;
+  padding: 10px 0;
+  width: 278px;
 
   @media (min-width: @tablet-width) {
     width: 632px;
@@ -125,7 +212,7 @@
 
 .additional-products__bonus {
   // display: flex;
-  // justify-content: center;
+  justify-content: center;
   // align-items: flex-end;
   position: relative;
   padding-top: 186px;
@@ -144,7 +231,7 @@
     padding-right: 100px;
     padding-bottom: 69px;
     padding-left: 423px;
-    background-image: url("../../img/bg-additional-bonus-tablet.png");
+    background-image: url("../img/bg-additional-bonus-tablet.png");
     min-height: 200px;
   }
 
@@ -154,7 +241,7 @@
     padding-left: 41px;
     padding-bottom: 42px;
     min-height: 289px;
-    background-image: url("../../img/bg-additional-bonus-desktop.png");
+    background-image: url("../img/bg-additional-bonus-desktop.png");
   }
 
   &::before {
