--- a/source/less/blocks/heading-primary.less
+++ b/source/less/blocks/heading-primary.less
@@ -1,4 +1,5 @@
 .heading-primary {
+  margin: 0;
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 36px;
   font-weight: 400;
@@ -11,8 +12,7 @@
   }
 
   &--catalog {
-    margin-top: 27px;
-    margin-bottom: 49px;
+    margin-bottom: 41px;
 
     @media (min-width: @tablet-width) {
       margin-bottom: 82px;
@@ -20,6 +20,18 @@
 
     @media (min-width: @desktop-width) {
       margin-bottom: 84px;
+    }
+  }
+
+  &--form {
+    margin-bottom: 37px;
+
+    @media (min-width: @tablet-width) {
+      margin-bottom: 54px;
+    }
+
+    @media (min-width: @desktop-width) {
+      margin-bottom: 56px;
     }
   }
 
