--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -7,10 +7,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    // margin-bottom: 60px;
     width: 324px;
     min-height: 511px;
-    // background-color: @basic-grey;
     background: linear-gradient(
       to bottom,
       @basic-white 81px,
@@ -20,7 +18,6 @@
   }
 
   @media (min-width: @desktop-width) {
-    // margin-bottom: 84px;
     width: 245px;
     min-height: 512px;
   }
@@ -30,21 +27,6 @@
     position: relative;
     padding-top: 73px;
     min-height: 158px;
-
-    &::before,
-    &::after {
-      content: "";
-      position: absolute;
-      top: 39px;
-      left: 125px;
-      width: 30px;
-      height: 1px;
-      background-color: @special-grey-6;
-    }
-
-    &::after {
-      transform: rotate(90deg);
-    }
 
     @media (min-width: @tablet-width) {
       margin-top: 81px;
@@ -85,7 +67,6 @@
     flex-direction: column-reverse;
     justify-content: flex-start;
     align-items: center;
-    // padding-bottom: 34px;
     width: 162px;
     height: 206px;
     order: -1;
@@ -110,6 +91,31 @@
   margin: 0;
   margin-bottom: 8px;
   text-align: center;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 39px;
+    left: 125px;
+    width: 30px;
+    height: 1px;
+    background-color: @special-grey-6;
+
+    @media (min-width: @tablet-width) {
+      top: 82px;
+      left: 128px;
+      width: 60px;
+    }
+
+    @media (min-width: @desktop-width) {
+      left: 90px;
+    }
+  }
+
+  &::after {
+    transform: rotate(90deg);
+  }
 
   @media (min-width: @tablet-width) {
     margin-bottom: 25px;
