--- a/source/less/style.less
+++ b/source/less/style.less
@@ -13,6 +13,7 @@
 @import "blocks/page.less";
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
+@import "blocks/heading-primary.less";
 @import "blocks/button.less";
 @import "blocks/promo.less";
 @import "blocks/select-programm.less";
@@ -27,7 +28,7 @@
 @import "blocks/social.less";
 @import "blocks/copyright.less";
 @import "blocks/product.less";
-@import "blocks/heading-primary.less";
 @import "blocks/map.less";
+@import "blocks/heading-secondary.less";
 
 // body { background: rgb(173, 216, 230);}
