--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -4,15 +4,17 @@
   align-items: flex-end;
   gap: 33px;
   margin: 0;
+  margin-bottom: 22px;
   padding: 0;
   padding-top: 20px;
-  padding-bottom: 21px;
+  padding-bottom: 16px;
 
   text-align: center;
   list-style: none;
   border-bottom: 1px solid @spesial-grey-3;
 
   @media (min-width: @tablet-width) {
+    margin-bottom: 0;
     gap: 28px;
     padding: 0;
     border: none;
