--- a/source/less/blocks/address.less
+++ b/source/less/blocks/address.less
@@ -1,5 +1,5 @@
 .address {
-  min-height: 514px;
+  min-height: 476px;
 
   @media (min-width: @tablet-width) {
     min-height: 596px;
@@ -15,13 +15,18 @@
   padding-bottom: 26px;
 
   @media (min-width: @tablet-width) {
-    padding-top: 66px;
-    padding-bottom: 51px;
+    padding-top: 64px;
+    padding-right: 43px;
+    padding-bottom: 58px;
+    padding-left: 39px;
   }
 
   @media (min-width: @desktop-width) {
     position: absolute;
     margin-top: 95px;
+    padding-top: 63px;
+    padding-right: 29px;
+    padding-left: 21px;
     z-index: 3;
     left: 30px;
     width: 570px;
@@ -59,7 +64,7 @@
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
-    line-height: 21px;
+    line-height: 26px;
   }
 }
 
@@ -106,10 +111,10 @@
   position: relative;
   z-index: 2;
   width: 100%;
-  min-height: 400px;
+  min-height: 362px;
 
   @media (min-width: @tablet-width) {
-    min-height: 400px;
+    min-height: 396px;
   }
 }
 
@@ -125,10 +130,14 @@
   display: block;
   margin: 0 auto;
   width: 100%;
-  min-height: 400px;
+  min-height: 362px;
   object-fit: cover;
 
   @media (min-width: @tablet-width) {
+    min-height: 396px;
+  }
+
+  @media (min-width: @desktop-width) {
     min-height: 400px;
   }
 }
