--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -227,7 +227,7 @@
 }
 
 .form__input-phone {
-  background-image: url("../../img/svg/icon-phone.svg");
+  background-image: url("../img/svg/icon-phone.svg");
   background-repeat: no-repeat;
   background-position: 95% 50%;
 }
