--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -21,6 +21,10 @@
     }
   }
 
+  @media (min-width: @tablet-width) {
+    margin-bottom: 0;
+  }
+
   @media (min-width: @desktop-width) {
     // min-height: 499px;
   }
@@ -51,7 +55,7 @@
 
 .promo__title {
   margin: 0 auto;
-  margin-bottom: 25px;
+  margin-bottom: 26px;
 
   @media (min-width: @tablet-width) {
     margin: 0;
@@ -85,6 +89,10 @@
     color: @basic-black;
     text-align: left;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 51px;
+  }
 }
 
 .promo__image {
@@ -94,18 +102,17 @@
   z-index: 2;
   width: 280px;
   height: 270px;
-  // box-sizing: content-box;
 
   @media (min-width: @tablet-width) {
     z-index: -1;
-    top: 231px;
+    top: 228px;
     width: 709px;
     height: 609px;
   }
 
   @media (min-width: @desktop-width) {
-    top: -50px;
-    left: 478px;
+    top: -82px;
+    left: 448px;
     width: 552px;
     height: 499px;
   }
@@ -130,13 +137,17 @@
 }
 
 .promo__button {
-  padding: 7px 44px;
+  padding: 10px 44px;
   width: 280px;
 
   @media (min-width: @tablet-width) {
-    padding: 14px 26px;
-    width: 244px;
+    padding: 17px 26px;
+    width: 247px;
     font-size: 20px;
     line-height: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 245px;
   }
 }
